# rag-eval

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: DIAGRAMS.md  prd.md
scripts/: inspect_outputs.py  run_benchmark.py
src/rag_eval/: __init__.py  config.py
src/rag_eval/chunking/: __init__.py  base.py  fixed.py  recursive.py  semantic.py
src/rag_eval/data/: __init__.py  loader.py
src/rag_eval/evaluation/: __init__.py  generation_metrics.py  retrieval_metrics.py
src/rag_eval/llm/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/rag_eval/pipeline/: __init__.py  rag_pipeline.py
src/rag_eval/retrieval/: dense.py  hybrid.py  sparse.py
tests/: __init__.py  test_chunking.py  test_metrics.py
